[project]
name = "tapr"
version = "0.3.1"
authors = [
  { name="thecodedog", email="elcodedog@gmail.com" },
]
description = "TAbular PRogramming in Python"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "h5py==3.8.0",
    "numpy==1.24.3",
    "pandas==2.0.1",
    "plotly==5.14.1",
    "xarray==2023.4.2",
]

[project.urls]
"Homepage" = "https://github.com/thecodedog/tapr"
"Bug Tracker" = "https://github.com/thecodedog/tapr/issues"